--- a/public/css/style_ar.css
+++ b/public/css/style_ar.css
@@ -1,4 +1,16 @@
 .meun{
     margin-top: -24px;
-    margin-left: 33px;
+
+margin-left: 966px;
 }
+.meun ul{
+    border-radius: 10px;
+}
+
+.cont{
+    margin-left: -230px;
+}
+.dropdown-menu {
+    border-radius: 10px;
+}
+
